--- a/todo.txt
+++ b/todo.txt
@@ -44,9 +44,9 @@ Engineering Tasks:
 - How do we not test Typekit when we're just testing CSS?
 
 To Do on current task:
-* Migrate from NodeUnit to Mocha for server tests
-- Use better assertion library
+* Incrementally re-test when shared files change
 - Migrate from NodeUnit to Mocha for smoke tests
+- Use better assertion library
 
 
 Potential future stories:
