--- a/todo.txt
+++ b/todo.txt
@@ -39,6 +39,8 @@ Engineering Tasks:
   - Use automatopia ideas
   - Clean up -T output
   - Fix duplicate 'BUILD OK' when running default build
+  - Move vendor directory to more convenient location?
+  - Need better of dealing with shared files' dependency (currently, it's duplicated in clientFiles() & serverFiles())
   - Clean up CI script?
 - Add HTML validation / linting?
 - How do we not test Typekit when we're just testing CSS?
