--- a/todo.txt
+++ b/todo.txt
@@ -44,7 +44,7 @@ Engineering Tasks:
 - How do we not test Typekit when we're just testing CSS?
 
 To Do on current task:
-* Use better assertion library in _assert.js
+* Incremental tests need to depend on 'vendor' directory
 - Migrate client code
 
 
