--- a/todo.txt
+++ b/todo.txt
@@ -44,7 +44,8 @@ Engineering Tasks:
 - How do we not test Typekit when we're just testing CSS?
 
 To Do on current task:
-* Incremental tests need to depend on 'vendor' directory
+* Uninstall assertive-chai npm module
+- Incremental tests need to depend on 'vendor' directory
 - Migrate client code
 
 
