Factored out file lookup into paths.js config file

--- a/todo.txt
+++ b/todo.txt
@@ -36,9 +36,12 @@ Engineering Tasks:
 - How do we not test Typekit when we're just testing CSS?
 
 To Do on current task:
+* Modify lint file paths to include config files
 - Use automatopia ideas
-  - Make paths.js config
+  - Make mocha.conf.js
+  - Bring over Browserify runner
   - more?
+- Factor out 'incrementalTask' logic
 - Clean up -T output
 - Fix duplicate 'BUILD OK' when running default build
 - Move vendor directory to more convenient location?
