Beautified Jake output

--- a/todo.txt
+++ b/todo.txt
@@ -39,6 +39,7 @@ To Do on current task:
 * Modify lint file paths to include config files
 - Use automatopia ideas
   - Pretty build output
+  - Use Automatopia's version checker library
 - Factor out 'incrementalTask' logic
 - Clean up -T output
 - Fix duplicate 'BUILD OK' when running default build
@@ -46,6 +47,7 @@ To Do on current task:
 - Need better of dealing with shared and vendor files' dependency
   - currently, they're duplicated in clientFiles() & serverFiles()
 - Clean up CI script?
+
 
 
 
