--- a/todo.txt
+++ b/todo.txt
@@ -36,8 +36,7 @@ Engineering Tasks:
 - How do we not test Typekit when we're just testing CSS?
 
 To Do on current task:
-* Modify lint file paths to include config files
-- Factor out 'incrementalTask' logic
+* Factor out 'incrementalTask' logic
 - Clean up -T output
 - Fix duplicate 'BUILD OK' when running default build
 - Move vendor directory to more convenient location?
