--- a/todo.txt
+++ b/todo.txt
@@ -31,6 +31,7 @@ User Stories to finish current MMF:
   - Need to cache-bust stylesheet and bundle.js
 
 Engineering Tasks:
+* Upgrade to Node.js 0.12.x
 - Add HTML validation / linting?
 - How do we not test Typekit when we're just testing CSS?
 
@@ -39,6 +40,7 @@ To Do on current task:
   - Upgraded Node to 0.10.37
   - Upgraded dependencies:
     - Selenium WebDriverJS works with latest version of Firefox (2.44.0 --> 2.45.1)
+  - Integrated
   - Consider:
     - Extra `{ async: true }` in Jakefile line 103 (Martin Grandrath E302)
     - Move Proclaim to `src/vendor/shared`? (Martin Grandrath E296)
