--- a/todo.txt
+++ b/todo.txt
@@ -46,6 +46,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Reconsider test layout; should we use a different organizing scheme?
+- Discuss: Why not use a describe block and one test per assertion? (Laurent Bourgalt-Roy, E313)
 - Fix height of drawing area
 
 
