Added hashcat comments to index.html (for cache-busting)

--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,7 @@ Engineering Tasks:
 - Deploy
 
 To Do on current task:
+- Automate hashcat
 
 Potential future stories:
 - "Try me" text in drawing area
