--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@ Minimum Marketable Features:
   - Firefox and Chrome fail on Windows 8.1 with a touch screen (ref Mattias Åslund email, 2 Feb 2015)
     - was not able to reproduce using http://modern.ie VM. Presumably due to lack of touch screen?
 - replace 404 page with professional design
+  - remember to cache-bust it
 - responsive design?
 - Accessibility?
 - Polish
