Cleaned up to-do

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ Minimum Marketable Features:
 + single-user painting on home page (episodes 33-200)
 * replace home page with professional design (episodes 201+)
 - support more browsers (Android, IE10, IE11)
+	- stop supporting IE 8?
   - iOS 8.1 upgrade broke Mobile Safari tests
   - Firefox and Chrome fail on Windows 8.1 with a touch screen (ref Mattias Åslund email, 2 Feb 2015)
     - was not able to reproduce using http://modern.ie VM. Presumably due to lack of touch screen?
@@ -26,19 +27,7 @@ User Stories to finish current MMF:
 * Release new design
 
 Engineering Tasks:
-* Clean up to-do
-- Integrate
+* Integrate
 - Deploy
 
 To Do on current task:
-
-Potential future stories:
-- "Try me" text in drawing area
-- Accessibility
-- Site monitoring and logging
-- Performance
-  - Note: serious performance degradation in IE 8 as more lines drawn
-- Scalability
-- Deploy (including smoke test to ensure that div is in home page)
-    (needs to depend on 'build'; just running foreman could give us outdated files)
-- Laurent Bourgalt-Roy, E263: fail-fast code (use in devops chapter?)
