--- a/todo.txt
+++ b/todo.txt
@@ -26,8 +26,6 @@ User Stories to finish current MMF:
 - 'Join Us' button is flush against bottom of window when window is shorter than content
 
 Engineering Tasks:
-* Remove all code that checks for IE 8
-- Integrate
+* Integrate
 
 To Do on current task:
-* Raphael
