--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,9 @@ Minimum Marketable Features:
 + marketing home page (episodes 1-32)
 + single-user painting on home page (episodes 33-200)
 + replace home page with professional design (episodes 201-321)
-* IE 11 support (get rid of IE 8?) (episodes 322+)
-- iOS 8 support
++ IE 11 support (get rid of IE 8?) (episodes 322-323)
 - Android support
+- iOS 8 support
 - replace 404 page with professional design
   - remember to cache-bust it
 - responsive design?
