Working on 404 page layout

--- a/todo.txt
+++ b/todo.txt
@@ -26,7 +26,6 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * update design
-- speed up CSS tests by resetting less
 - update our server to specify UTF-8
 - update our smoke tests to check fonts on 404 page
 - refactor our CSS
@@ -35,3 +34,4 @@ Engineering Tasks:
 To Do on current task:
 * rewrite HTML for the page
 - test-drive CSS
+- modify home page tests to check text-align: center
