--- a/todo.txt
+++ b/todo.txt
@@ -27,12 +27,9 @@ User Stories to finish current MMF:
 - release
 
 Engineering Tasks:
-* modify home page tests with latest test approach
-- update our server to specify UTF-8
+* update our server to specify UTF-8
 - update our smoke tests to check fonts on 404 page
 - refactor our CSS
 - improve cache-bust code in Jakefile
 
 To Do on current task:
-* check text-align: center
-- put sizes in layout test
