--- a/todo.txt
+++ b/todo.txt
@@ -27,10 +27,8 @@ User Stories to finish current MMF:
 - release
 
 Engineering Tasks:
-* update our server to specify UTF-8
-- update our smoke tests to check fonts on 404 page
+* update our smoke tests to check fonts on 404 page
 - improve cache-bust code in Jakefile
 - refactor our CSS
 
 To Do on current task:
-- flip around expected and actual on _server_test.js
